Fix date styling on mobile

--- a/src/styles/entry.css
+++ b/src/styles/entry.css
@@ -148,7 +148,7 @@ main.entry .date {
         display: none;
     }
 
-    .date {
+    main.entry .date {
         font-size: 1.2em;
         top: .8em;
     }
